--- a/README
+++ b/README
@@ -1,9 +1,30 @@
-jquery.inject is a plugin for avoiding ugly, unreadable HTML injections
+jquery.inject is a plugin for avoiding ugly, unreadable  HTML DOM object injections
 
 The old way:
-$('body').append('<div id="header" class="wrapped"></div><div id="main" class="wrapped"><span class="title"></span></div>');
+
+````javascript
+$('body').append('<div id="header" class="wrapped"></div>');`
+````
 
 The new way:
+
+````javascript
 var body = $('body');
-body.inject(['div#header.wrapped','#main.wrapped']);
-body.main.inject('span.title');
+body.inject('div#header.wrapped');
+````
+
+You can even pass in an array
+````javascript
+var body = $('body');
+body.inject(['div#header.wrapped','div#main.wrapped']);
+````
+
+Injections automatically create a tree that can be easily traverse. Object names are dynamically created from the first given attribute ('id' or 'class').
+````javascript
+var body = $('body');
+body.inject(['div#header.wrapped','div#main.wrapped']);
+//Automatically creates body.header and body.main
+body.header.inject('span.title');
+body.main.inject('div.left');
+body.main.inject('div.right');
+````
